--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "test:dry-run":"node ./test/e2e/scripts/dry-run.test.js"
+    "test:dry-run":"node ./test/e2e/scripts/dry-run.test.js",
+    "test:analyse-directory":"node ./test/e2e/scripts/analyse-directory.test.js"
   },
   "author": "",
   "license": "ISC",
