start unit testing

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha ./*.test.js",
     "test:dry-run": "node ./test/e2e/scripts/dry-run.test.js",
     "test:analyse-directory": "node ./test/e2e/scripts/analyse-directory.test.js",
     "test:validate-directory": "node ./test/e2e/scripts/validate-directory.test.js"
@@ -16,5 +16,9 @@
     "exif-date": "^2.1.0",
     "moment": "^2.24.0",
     "recursive-readdir": "^2.2.2"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^7.1.1"
   }
 }
