--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bunyan": "^1.8.12",
     "exif": "^0.6.0",
     "exif-date": "^2.1.0",
     "moment": "^2.24.0",
