--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "analyse-directory": "node ./.bin/analyse-directory",
+    "analyse-results": "node ./.bin/analyse-results",
+    "generate-rename-commands": "node ./.bin/generate-rename-commands",
     "test": "mocha ./*.test.js",
+    "test:cli": "./.bin/test-cli.sh",
     "test:dry-run": "node ./test/e2e/scripts/dry-run.test.js",
     "test:analyse-directory": "node ./test/e2e/scripts/analyse-directory.test.js",
     "test:validate-directory": "node ./test/e2e/scripts/validate-directory.test.js"
